adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis voluptate et tenetur, sequi natus culpa nostrum odio perspiciatis perferendis aut doloremque alias. Pariatur, qui. Iste sunt natus dicta ratione eaque?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, architecto quam dolores iusto libero nihil quos consectetur! Nostrum accusantium, et officiis dicta amet, animi doloribus doloremque eaque adipisci ut dignissimos!</p>
 </body>
 </html>
